fix missing hasura.js file in dockerfile

--- a/template/node-hasura/Dockerfile
+++ b/template/node-hasura/Dockerfile
@@ -24,7 +24,8 @@ COPY package.json ./
 RUN npm i
 
 # Copy outer function handler
-COPY index.js ./
+COPY index.js .
+COPY hasura.js .
 
 # COPY function node packages and install, adding this as a separate
 # entry allows caching of npm install
