--- a/lib/HasuraHandlingTests/HasuraHandlingTests.csproj
+++ b/lib/HasuraHandlingTests/HasuraHandlingTests.csproj
@@ -11,8 +11,12 @@
     <PackageReference Include="JunitXml.TestLogger" Version="2.1.32" />
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HasuraHandling\HasuraHandling.csproj" />
   </ItemGroup>
 
 </Project>
