set PreserveCompilationReferences and PreserveCompilationContext to true

--- a/template/dotnet-hasura/root.csproj
+++ b/template/dotnet-hasura/root.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>dotnet_hasura</RootNamespace>
+    <PreserveCompilationReferences>true</PreserveCompilationReferences>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
