--- a/template/node-hasura/function/package.json
+++ b/template/node-hasura/function/package.json
@@ -4,12 +4,24 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn test:unit:ci",
+    "test:unit": "jest",
+    "test:unit:ci": "jest --ci --reporters=default --reporters=jest-junit",
+    "test:unit:coverage": "jest --coverage",
+    "test:unit:ui": "majestic --port 3001",
+    "test:unit:watch": "jest --watch",
+    "test:unit:watchAll": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "http-errors": "^1.8.0"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2",
+    "jest-config": "^26.4.2",
+    "jest-junit": "^11.1.0",
+    "jest-when": "^2.7.2"
   }
 }
