--- a/template/node-hasura/function/package.json
+++ b/template/node-hasura/function/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "yarn test:unit:ci",
+    "test": "yarn test:unit",
     "test:unit": "jest",
     "test:unit:ci": "jest --ci --reporters=default --reporters=jest-junit",
     "test:unit:coverage": "jest --coverage",
