migrate from .net core 3.1 to .net 5.0

--- a/lib/HasuraHandling/HasuraHandling.csproj
+++ b/lib/HasuraHandling/HasuraHandling.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>softozor</Authors>
     <Product>shopozor</Product>
     <Description>Necessary boilerplate code for serverless functions called by hasura actions.</Description>
@@ -17,9 +17,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL.Client" Version="3.1.6" />
+    <PackageReference Include="GraphQL.Client" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
