--- a/lib/HasuraHandling/Softozor.HasuraHandling.csproj
+++ b/lib/HasuraHandling/Softozor.HasuraHandling.csproj
@@ -44,4 +44,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Properties\" />
+	</ItemGroup>
+
 </Project>
