--- a/lib/Softozor.HasuraHandling.Tests/Softozor.HasuraHandling.Tests.csproj
+++ b/lib/Softozor.HasuraHandling.Tests/Softozor.HasuraHandling.Tests.csproj
@@ -37,7 +37,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\HasuraHandling\Softozor.HasuraHandling.csproj" />
+	  <ProjectReference Include="..\Softozor.HasuraHandling\Softozor.HasuraHandling.csproj" />
 	</ItemGroup>
 
 </Project>
