try to publish Softozor.HasuraHandling.1.0.5 nuget package

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,8 +93,9 @@ publish-hasura-handling-patch:
   only:
     refs:
     - master
-    changes:
-    - ./lib/Softozor.HasuraHandling/**/*
+# TODO: reactivate!
+#    changes:
+#    - ./lib/Softozor.HasuraHandling/**/*
 
 publish-hasura-handling-minor:
   image: softozor/dotnet-publish:$TOOLS_SHA
