try to publish Softozor.HasuraHandling.1.0.5 nuget package

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,9 +58,10 @@ build:
   artifacts:
     paths:
     - $CI_PROJECT_DIR/lib/*/bin/${CONFIGURATION}/net${DOTNET_VERSION}
-  only:
-    changes:
-    - lib/**/*
+# TODO: reactivate
+#  only:
+#    changes:
+#    - lib/**/*
 
 hasura-handling-tests:
   stage: lib-test
@@ -75,9 +76,10 @@ hasura-handling-tests:
       - $CI_PROJECT_DIR/lib/*.Tests/test-reports/*.xml
     paths:
     - $CI_PROJECT_DIR/lib/*.Tests/test-reports/*.xml
-  only:
-    changes:
-    - lib/**/*
+# TODO: reactivate
+#  only:
+#    changes:
+#    - lib/**/*
 
 publish-hasura-handling-patch:
   image: softozor/dotnet-publish:$TOOLS_SHA
