--- a/template/dotnet-hasura/Dockerfile
+++ b/template/dotnet-hasura/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /src/function
 COPY ./function/$FUNCTION_NAME.csproj  ./Function.csproj
 WORKDIR /src
 COPY ./root.csproj  .
-RUN nuget source Add -Name "gitlab-hasura-serverless" -Source "http://gitlab.hidora.com/api/v4/projects/142/packages/nuget/index.json" \
+RUN dotnet nuget add source http://gitlab.hidora.com/api/v4/projects/142/packages/nuget/index.json --name "gitlab-hasura-serverless" \
     && dotnet restore
 COPY . .
 COPY ./function/appsettings.json .
