--- a/features/examples/dotnet-hasura/DotNetHasura.csproj
+++ b/features/examples/dotnet-hasura/DotNetHasura.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
     <PackageReference Include="Shopozor.GraphqlClient" Version="1.0.4" />
-    <PackageReference Include="Shopozor.HasuraHandling" Version="1.0.5" />
+    <PackageReference Include="Softozor.HasuraHandling" Version="1.0.5" />
   </ItemGroup>
 
 </Project>
