--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,7 @@ publish-feature-test-image:
   script:
   - |
     docker build $DOCKERFILE_FOLDER -t $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA -t $DOCKER_IMAGE:latest \
-      --build-arg FAAS_CLI_VERSION=${FAAS_CLI_VERSION} \
-      --build-arg PERSONAL_ACCESS_TOKEN=${PRIVATE_ACCESS_TOKEN} \
-      --build-arg CI_API_V4_URL=${CI_API_V4_URL} \
-      --build-arg PACKAGES_PYPI_PROJECT_ID=${PACKAGES_PYPI_PROJECT_ID}
+      --build-arg FAAS_CLI_VERSION=${FAAS_CLI_VERSION}
   - *docker-push
   only:
     changes:
@@ -48,16 +45,16 @@ acceptance-test:
   artifacts:
     reports:
       junit:
-        - $CI_PROJECT_DIR/features/test-reports/*.xml
+        - ./features/test-reports/*.xml
     paths:
-      - $CI_PROJECT_DIR/features/test-reports/*.xml
+      - ./features/test-reports/*.xml
 
 publish-pickles:
   stage: report
   image: softozor/pickles:2.21.1
   variables:
     APPLICATION_NAME: hasura-serverless
-    OUTPUT_DIR: $CI_PROJECT_DIR/pickles
+    OUTPUT_DIR: ./pickles
   script:
     - |
       mono /pickles/Pickles.exe --feature-directory=. \
