perform docker login before running the acceptance tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
-- prepare
-- acceptance-test
-- report
+  - prepare
+  - acceptance-test
+  - report
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -9,11 +9,11 @@ variables:
   TEST_IMAGE_NAME: softozor/hasura-serverless-test
 
 .docker-login: &docker-login
-- docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 .docker-push: &docker-push
-- docker push $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA
-- docker push $DOCKER_IMAGE:latest
+  - docker push $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA
+  - docker push $DOCKER_IMAGE:latest
 
 publish-feature-test-image:
   stage: prepare
@@ -22,12 +22,12 @@ publish-feature-test-image:
     DOCKER_IMAGE: ${TEST_IMAGE_NAME}
     DOCKERFILE_FOLDER: ./ci/feature-tests
   before_script:
-  - *docker-login
+    - *docker-login
   script:
-  - |
-    docker build $DOCKERFILE_FOLDER -t $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA -t $DOCKER_IMAGE:latest \
-      --build-arg FAAS_CLI_VERSION=${FAAS_CLI_VERSION}
-  - *docker-push
+    - |
+      docker build $DOCKERFILE_FOLDER -t $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA -t $DOCKER_IMAGE:latest \
+        --build-arg FAAS_CLI_VERSION=${FAAS_CLI_VERSION}
+    - *docker-push
   only:
     changes:
       - ci/feature-tests/*
@@ -35,6 +35,8 @@ publish-feature-test-image:
 acceptance-test:
   stage: acceptance-test
   image: ${TEST_IMAGE_NAME}:latest
+  before_script:
+    - *docker-login
   script:
     - |
       behave --junit --junit-directory ./features/test-reports --tags ~wip \
