--- a/ci/feature-tests/Dockerfile
+++ b/ci/feature-tests/Dockerfile
@@ -4,6 +4,7 @@ ARG FAAS_CLI_VERSION
 
 COPY ./requirements.txt .
 
+# git is necessary as long as we clone behave's git repo
 RUN apk add --update curl git \
   && curl -sSL https://github.com/openfaas/faas-cli/releases/download/${FAAS_CLI_VERSION}/faas-cli --output /usr/local/bin/faas-cli \
   && chmod u+x /usr/local/bin/faas-cli \
