--- a/ci/feature-tests/requirements.txt
+++ b/ci/feature-tests/requirements.txt
@@ -1,5 +1,6 @@
 -e git+https://github.com/behave/behave@bfda54448906d919ffd3fa4424b6d3c155a5388b#egg=behave
-faas-client==1.4.10
+faas-client==1.4.12
 jelastic-client==1.3.10
 python-gitlab==2.10.1
+requests==2.26.0
 softozor-test-utils==1.0.5
