--- a/template/dotnet-hasura/Dockerfile
+++ b/template/dotnet-hasura/Dockerfile
@@ -18,15 +18,12 @@ RUN dotnet publish -c release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine-amd64 
 
-ARG FUNCTION_NAME
-ENV FUNCTION_NAME=${FUNCTION_NAME}
-
 COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
 
 WORKDIR /app
 COPY --from=builder /app .
 
-ENV fprocess="dotnet ./${FUNCTION_NAME}.dll"
+ENV fprocess="dotnet ./root.dll"
 ENV cgi_headers="true"
 ENV mode="http"
 ENV upstream_url="http://localhost:80"
