--- a/features/examples/faas.yml
+++ b/features/examples/faas.yml
@@ -2,6 +2,12 @@ version: 1.0
 provider:
   name: openfaas
 functions:
+  hasura-dotnet:
+    lang: dotnet-hasura
+    handler: ./dotnet-hasura
+    image: softozor/dotnet-hasura-example-fnc:latest
+    build_args:
+      FUNCTION_NAME: DotNetHasura
   hasura-nodejs:
     lang: node-hasura
     handler: ./nodejs-hasura
@@ -9,4 +15,6 @@ functions:
 configuration:
   templates:
     - name: node-hasura
+      source: http://gitlab.hidora.com/softozor/faas-templates.git
+    - name: dotnet-hasura
       source: http://gitlab.hidora.com/softozor/faas-templates.git
