fix method invocation and response interpretation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ acceptance-test:
     - rm -f /tmp/output
   script:
     - |
-      behave --junit --junit-directory ./features/test-reports --tags current \
+      behave --junit --junit-directory ./features/test-reports --tags ~wip \
         -D project-root-folder="${CI_PROJECT_DIR}" \
         -D api-url="${JELASTIC_API_URL}" \
         -D api-token="${JELASTIC_ACCESS_TOKEN}" \
